deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app
  namespace: flask-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: flask-app
          image: krishaflaskacr2026.azurecr.io/python-flask-app:1.0
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
