taint.yaml
apiVersion: v1
kind: Pod

metadata:
  name: taint

spec:

  tolerations:
    - key: team
      operator: Equal
      value: database
      effect: NoSchedule

  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: environment
                operator: In
                values:
                  - database

  containers:
    - name: nginx
      image: nginx
