services.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  namespace: flask-app

spec:
  type: ClusterIP

  selector:
    app: flask-app

  ports:
    - port: 5000
      targetPort: 5000
